# otus-cpp-basics

./: CMakeLists.txt  README.md  guess_the_number.cpp  high_scores.txt  homework_3  main.cpp  max.cpp  mean.cpp  min.cpp  move_me_out.cpp  quantile.cpp  statistic.cpp  std.cpp  test_1_file.txt  test_2_file.txt  utils.cpp  utils.h
data/: file1.txt  file2.txt
gtest/lib/: gtest_main.lib
gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
include/: Activation.h  Dense.h  Game.h  Game_interface.h  Layer.h  Net.h  Players.h  Utils.h  Weights_initializators.h  add.hpp  div.hpp  mul.hpp  n_container.h  p_container.h  parallelization.h  sub.hpp  test.h  variable.hpp
src/: Game.cpp  Game_interface.cpp  Utils.cpp  main  main.cpp  parallelization.cpp  parser.cpp  test.cpp
src/NeuralNetwork/: Layer.cpp  Net.cpp
src/NeuralNetwork/Activations/: Activation.cpp
src/NeuralNetwork/Weights_initializators/: Weights_initializators.cpp
src/NeuralNetwork/Weights_layers/: Dense.cpp
src/Players/: Players.cpp
test/: test.cpp
test/test_list/: test_list.cpp
test/test_vector/: test_vector.cpp
weights/: layer_1_9x64_b.txt  layer_1_9x64_w.txt  layer_2_64x32_b.txt  layer_2_64x32_w.txt  layer_3_32x1_b.txt  layer_3_32x1_w.txt
